add support for running agent helm chart on persistent volume (#7123)
* add support for running agent on persistent volume

* address review feedback

* add more comments on the fields

* update statefulset to be compatabile with upstream change

--- a/docs/pages/kubernetes-access/helm/reference.mdx
+++ b/docs/pages/kubernetes-access/helm/reference.mdx
@@ -1326,6 +1326,79 @@ These labels can then be used with Teleport's RBAC policies to define access rul
   </TabItem>
 </Tabs>
 
+## `storage`
+
+### `storage.enabled`
+
+| Type | Default value |
+| - | - |
+| `bool` | `false` |
+
+Enables the creation of a Kubernetes persistent volume to hold Teleport agent state.
+
+[Kubernetes reference](https://kubernetes.io/docs/concepts/storage/persistent-volumes/)
+
+<Tabs>
+  <TabItem label="values.yaml">
+  ```yaml
+  storage:
+    enabled: true
+  ```
+  </TabItem>
+  <TabItem label="--set">
+  ```bash
+  --set storage.enabled=true
+  ```
+  </TabItem>
+</Tabs>
+
+### `storage.storageClassName`
+
+| Type | Default value |
+| - | - |
+| `string` | `nil` |
+
+The storage class name the persistent volume should use when creating persistent volume claims. The provided storage class
+name needs to exist on the Kubernetes cluster for Teleport to use.
+
+[Kubernetes reference](https://kubernetes.io/docs/concepts/storage/storage-classes/)
+
+<Tabs>
+  <TabItem label="values.yaml">
+  ```yaml
+  storage:
+    storageClassName: teleport-storage-class
+  ```
+  </TabItem>
+  <TabItem label="--set">
+  ```bash
+  --set storage.storageClassName=teleport-storage-class
+  ```
+  </TabItem>
+</Tabs>
+
+### `storage.requests`
+
+| Type | Default value |
+| - | - |
+| `string` | `128Mi` |
+
+The size of persistent volume to create.
+
+<Tabs>
+  <TabItem label="values.yaml">
+  ```yaml
+  storage:
+    requests: 128Mi
+  ```
+  </TabItem>
+  <TabItem label="--set">
+  ```bash
+  --set storage.requests=128Mi
+  ```
+  </TabItem>
+</Tabs>
+
 ## `image`
 
 | Type | Default value |
@@ -1550,6 +1623,32 @@ Kubernetes affinity to set for pod assignments.
   --set affinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution.nodeSelectorTerms[0].matchExpressions[0].key=gravitational.io/dedicated \
   --set affinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution.nodeSelectorTerms[0].matchExpressions[0].operator=In \
   --set affinity.nodeAffinity.requiredDuringSchedulingIgnoredDuringExecution.nodeSelectorTerms[0].matchExpressions[0].values[0]=teleport
+  ```
+  </TabItem>
+</Tabs>
+
+## `nodeSelector`
+
+| Type | Default value |
+| - | - |
+| `object` | `{}` |
+
+`nodeSelector` can be used to add a map of key-value pairs to constrain the nodes the agent pods will run on. 
+
+[Kubernetes reference](https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/)
+
+<Tabs>
+  <TabItem label="values.yaml">
+  ```yaml
+  nodeSelector:
+    role: node
+    region: us-east
+  ```
+  </TabItem>
+  <TabItem label="--set">
+  ```bash
+  --set nodeSelector.role=node \
+  --set nodeSelector.region=us-east
   ```
   </TabItem>
 </Tabs>
