remove double quotes from acme email

--- a/docs/pages/config-reference.mdx
+++ b/docs/pages/config-reference.mdx
@@ -403,7 +403,7 @@ proxy_service:
     # 'teleport configure --acme --acme-email=email@example.com --cluster-name=tele.example.com -o file'
     #acme:
     #  enabled: yes
-    #  email: "user@example.com"
+    #  email: user@example.com
 
 # This section configures the 'application service'
 app_service:
