--- a/docs/pages/cloud/faq.mdx
+++ b/docs/pages/cloud/faq.mdx
@@ -3,9 +3,13 @@ title: Teleport Cloud FAQ
 description: Teleport cloud frequently asked questions.
 ---
 
-### Can I use Teleport Cloud Preview in production?
+### Can I use Teleport Cloud in production?
 
 Yes.
+
+## What is the cloud SLA
+
+Our current SLA is 99.5.
 
 ### How does Cloud Billing work?
 
@@ -68,8 +72,6 @@ cluster on AWS.
 ### Will Teleport be automatically upgraded with each release?
 
 We will be upgrading the preview version of Teleport Cloud automatically.
-We will add an option to trigger upgrades manually and automatically
-within a configurable maintenance window.
 
 ### Does your SOCII report include Teleport Cloud?
 
