--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting started
-description: Getting started with Teleport - identity-aware ccess plane for SSH, HTTPS, Kubernetes, and Databases.
+description: Getting started with Teleport - identity-aware access plane for SSH, HTTPS, Kubernetes, and Databases.
 layout: tocless-doc
 ---
 
@@ -11,7 +11,7 @@ layout: tocless-doc
   <Tile icon="bolt" title="Docker" href="./getting-started/docker-compose.mdx">
     Try Teleport locally using Docker Compose.
   </Tile>
-  <Tile icon="kubernetes" title="Kubernetes" href="./kubernetes-access/getting-started.mdx">
+  <Tile icon="kubernetes" title="Kubernetes" href="./kubernetes-access/getting-started/cluster.mdx">
     Get started with Teleport and Kubernetes.
   </Tile>
   <Tile icon="cloud" title="Cloud" href="https://goteleport.com/signup">
