Tweaks, update and k8s agent getting started (#7656)
Signed-off-by: Alexander Klizhentas <klizhentas@gmail.com>

--- a/docs/pages/cloud/faq.mdx
+++ b/docs/pages/cloud/faq.mdx
@@ -3,7 +3,7 @@ title: Teleport Cloud FAQ
 description: Teleport cloud frequently asked questions.
 ---
 
-### Can I use Teleport Cloud Preview in production?
+### Can I use Teleport Cloud in production?
 
 Yes.
 
@@ -73,8 +73,6 @@ cluster on AWS.
 ### Will Teleport be automatically upgraded with each release?
 
 We will be upgrading the preview version of Teleport Cloud automatically.
-We will add an option to trigger upgrades manually and automatically
-within a configurable maintenance window.
 
 ### Does your SOCII report include Teleport Cloud?
 
