--- a/docs/pages/kubernetes-access/getting-started.mdx
+++ b/docs/pages/kubernetes-access/getting-started.mdx
@@ -2,6 +2,7 @@
 title: Getting Started with Kubernetes Access
 description: Getting started with Teleport Kubernetes Access.
 videoBanner: VPGYLEMTdJ8
+layout: tocless-doc
 ---
 
 <TileSet>
