aws: Add s3:ListBucketMultipartUploads permissions to IAM policies

--- a/docs/pages/kubernetes-access/helm/guides/aws.mdx
+++ b/docs/pages/kubernetes-access/helm/guides/aws.mdx
@@ -106,6 +106,7 @@ You'll need to replace these values in the policy example below:
                 "s3:GetEncryptionConfiguration",
                 "s3:GetObjectRetention",
                 "s3:ListBucketVersions",
+                "s3:ListBucketMultipartUploads",
                 "s3:CreateBucket",
                 "s3:ListBucket",
                 "s3:GetBucketVersioning",
