Update SSO guides
* Cleaning Okta copy.
* Update other connectors.
* Cleanup and URL tweaks.

Signed-off-by: Alexander Klizhentas <klizhentas@gmail.com>

--- a/docs/pages/application-access/controls.mdx
+++ b/docs/pages/application-access/controls.mdx
@@ -76,9 +76,9 @@ allow:
 - Learn about using [JWT tokens](./guides/jwt.mdx) to implement access controls
   in your application.
 - Integrate with your identity provider:
-  - [OIDC guide](../enterprise/sso/oidc.mdx)
-  - [ADFS guide](../enterprise/sso/ssh-adfs.mdx)
-  - [Azure AD guide](../enterprise/sso/ssh-azuread.mdx)
-  - [GSuite guide](../enterprise/sso/ssh-azuread.mdx)
-  - [Onelogin guide](../enterprise/sso/ssh-one-login.mdx)
-  - [Okta guide](../enterprise/sso/ssh-okta.mdx)
+  - [OIDC](../enterprise/sso/oidc.mdx)
+  - [ADFS](../enterprise/sso/adfs.mdx)
+  - [Azure AD](../enterprise/sso/azuread.mdx)
+  - [GSuite](../enterprise/sso/azuread.mdx)
+  - [Onelogin](../enterprise/sso/one-login.mdx)
+  - [Okta](../enterprise/sso/okta.mdx)
