--- a/docs/pages/enterprise/getting-started.mdx
+++ b/docs/pages/enterprise/getting-started.mdx
@@ -371,13 +371,13 @@ $ tsh logout
 The local account is good for administrative purposes but regular users of
 Teleport Enterprise should be using a Single Sign-On (SSO) mechanism that use SAML or OIDC protocols.
 
-Take a look at the [SSH via Single Sign-on](sso/ssh-sso.mdx) chapter to learn the basics of
+Take a look at the [Single Sign-on](sso.mdx) chapter to learn the basics of
 integrating Teleport with SSO providers. We have the following detailed guides for
 configuring SSO providers:
 
-- [Okta](sso/ssh-okta.mdx)
-- [Active Directory](sso/ssh-adfs.mdx)
-- [One Login](sso/ssh-one-login.mdx)
+- [Okta](sso/okta.mdx)
+- [Active Directory](sso/adfs.mdx)
+- [One Login](sso/one-login.mdx)
 - [Github](../admin-guide.mdx#github-oauth-20)
 
 Any SAML-compliant provider can be configured with Teleport by following the
