--- a/docs/pages/enterprise/sso/oidc.mdx
+++ b/docs/pages/enterprise/sso/oidc.mdx
@@ -48,7 +48,7 @@ Add your OIDC connector information to `teleport.yaml`. A few examples are
 provided below.
 
 <Admonition type="tip">
-  For Google Workspace please follow our dedicated [Guide](ssh-google-workspace.mdx)
+  For Google Workspace please follow our dedicated [Guide](google-workspace.mdx)
 </Admonition>
 
 ## OIDC Redirect URL
@@ -166,11 +166,11 @@ spec:
   scope: [ "group" ]
   claims_to_roles:
      - claim: "group"
-       value: "admin"
-       roles: [ "admin" ]
+       value: "editor"
+       roles: [ "editor" ]
      - claim: "group"
        value: "user"
-       roles: [ "user" ]
+       roles: [ "access" ]
 ```
 
 ### Optional: Redirect URL and Timeout
