--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -93,7 +93,7 @@ Teleport provides three offerings:
     <tr>
       <td>FedRamp Control</td>
       <td>&#10006;</td>
-      <td>[Compiled with FIPS-certified crypto libraries, FedRamp control features](./enterprise/ssh-kubernetes-fedramp.mdx)</td>
+      <td>[Compiled with FIPS-certified crypto libraries, FedRamp control features](./enterprise/fedramp.mdx)</td>
     </tr>
     <tr>
       <td>PCI DSS Features</td>
@@ -178,7 +178,7 @@ The Teleport Enterprise offering gives users the following additional features:
 
 - Role-based access control, also known as [RBAC](enterprise/introduction.mdx#rbac).
 - Authentication via SAML and OpenID with providers like Okta, Active
-  Directory, Auth0, etc. [SSO](enterprise/sso/ssh-sso.mdx).
+  Directory, Auth0, etc. [SSO](enterprise/sso.mdx).
 - Premium support.
 
 We also offer implementation services, to help you integrate
