--- a/docs/pages/kubernetes-access/controls.mdx
+++ b/docs/pages/kubernetes-access/controls.mdx
@@ -296,8 +296,8 @@ Take a look at the example usage in a [Teleport Helm chart](https://github.com/g
 Integrate with your identity provider:
 
 - [OIDC guide](../enterprise/sso/oidc.mdx)
-- [ADFS guide](../enterprise/sso/ssh-adfs.mdx)
-- [Azure AD guide](../enterprise/sso/ssh-azuread.mdx)
-- [Google Workspace guide](../enterprise/sso/ssh-google-workspace.mdx)
-- [Onelogin guide](../enterprise/sso/ssh-one-login.mdx)
-- [Okta guide](../enterprise/sso/ssh-okta.mdx)
+- [ADFS guide](../enterprise/sso/adfs.mdx)
+- [Azure AD guide](../enterprise/sso/azuread.mdx)
+- [Google Workspace guide](../enterprise/sso/google-workspace.mdx)
+- [Onelogin guide](../enterprise/sso/one-login.mdx)
+- [Okta guide](../enterprise/sso/okta.mdx)
