--- a/docs/pages/kubernetes-access/getting-started/cluster.mdx
+++ b/docs/pages/kubernetes-access/getting-started/cluster.mdx
@@ -285,7 +285,7 @@ We are going to setup Github connector for OSS and Okta for Enterprise version.
   </TabItem>
 
   <TabItem label="Enterprise">
-    Follow [SAML Okta Guide](../../enterprise/sso/ssh-okta.mdx#configure-okta) to create a SAML app.
+    Follow [SAML Okta Guide](../../enterprise/sso/okta.mdx#configure-okta) to create a SAML app.
     Check out [OIDC guides](../../enterprise/sso/oidc.mdx#identity-providers) for OpenID Connect apps.
     Save the file below as `okta.yaml` and update the `acs` field.
     Any member in Okta group `okta-admin` will assume a builtin role `admin`.
