--- a/docs/pages/preview/upcoming-releases.mdx
+++ b/docs/pages/preview/upcoming-releases.mdx
@@ -6,28 +6,39 @@ h1: Upcoming Teleport Releases
 
 The teleport team delivers a new major release roughly every 3 months.
 
-## Teleport 7.0 "Stockholm"
+## Teleport
 
-The Core team adds support for [hardware security modules - HSM](https://github.com/gravitational/teleport/blob/master/rfd/0025-hsm.md) for managing certificate authorities.
+### Teleport 7.0 "Stockholm"
 
-The team improves security with fleet patch upgrades, makes it easier to create access requests
-and adds [Session termination and user locking](https://github.com/gravitational/teleport/issues/3360).
+Teleport 7.0 will focus on adding support for the MongoDB protocol, BPF based restricted sessions, UX improvements, and foundations for automatic upgrades. Other features have been delayed to a Teleport 7 minor release.
 
-Our engineers are working on improving first-time user experience of `teleport` and `tsh`.
+You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/54).
 
-The Database Access team adds MongoDB protocol support.
+| Version     | Date            | Description                      |
+| ----------- | --------------- | -------------------------------- |
+| First alpha | June 1st, 2021  | Good for some testing and demos. |
+| First beta  | June 15th, 2021 | Deploy on staging.               |
+| Release     | July 30th, 2021 | Good to go for production.       |
 
-### Release Schedule
+### Teleport 7.1
 
-| Version | Date | Description |
-| - | - | - |
-| First beta | July 1st, 2021 | Deploy on staging. |
-| Release | July 30th, 2021 | Good to go for production. |
+Teleport 7.1 will focus on [HSM](https://github.com/gravitational/teleport/issues/4225) and [session termination and user locking](https://github.com/gravitational/teleport/issues/3360) which were delayed from 7.0 due to timing constraints.
 
-### Features
+| Version | Date              | Description         |
+| ------- | ----------------- | ------------------- |
+| Release | August 16th, 2021 | Production release. |
 
-You can find the full list of fixes and features in the
-[Github milestone](https://github.com/gravitational/teleport/milestone/54).
+You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/58).
+
+### Teleport 7.2
+
+Teleport 7.2 will focus on [simplified node joining](https://github.com/gravitational/teleport/issues/7145) and UX improvements which were delayed from 7.0 due to timing constraints.
+
+You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/60).
+
+| Version | Date              | Description         |
+| ------- | ----------------- | ------------------- |
+| Release | August 30th, 2021 | Production release. |
 
 ## Teleport Pro "Washington"
 
