fixed typo on soc2.mdx

--- a/docs/pages/includes/soc2.mdx
+++ b/docs/pages/includes/soc2.mdx
@@ -2,7 +2,7 @@ April 12th, 2021 marks the date our most current SOC2 audit was completed.
 
 Generally speaking, Gravitational has been able to achieve SOC2 compliance by making continued improvements to all Teleport editions. 
 
-OC2 assessments are based on five primary trust service areas: security, availability, processing integrity, confidentiality and privacy. It was determined that Teleport helps, in part, with all five.
+SOC2 assessments are based on five primary trust service areas: security, availability, processing integrity, confidentiality and privacy. It was determined that Teleport helps, in part, with all five.
 
 Current and past audits detail SOC2 compliance for Gravitational and products:
 
