Try mini-diagrams and update launchpad titles

--- a/docs/pages/kubernetes-access/getting-started.mdx
+++ b/docs/pages/kubernetes-access/getting-started.mdx
@@ -5,10 +5,12 @@ layout: tocless-doc
 ---
 
 <TileSet>
-  <Tile icon="server" title="Standalone Teleport" href="./getting-started/cluster.mdx">
-    Deploy Standalone Teleport In Kubernetes.
+  <Tile title="Teleport Cluster in Kubernetes" href="./getting-started/cluster.mdx">
+    ![Teleport ](../../img/k8s/mini-diagrams/teleport-in-k8s-mono.svg)
+    Deploy a standalone Teleport cluster in a Kubernetes cluster.
   </Tile>
-  <Tile icon="server" title="Connect Kubernetes Cluster" href="./getting-started/agent.mdx">
-    Connect Kubernetes cluster to existing Teleport Cluster.
+  <Tile title="Teleport Kubernetes Agent" href="./getting-started/agent.mdx">
+    ![Kubernetes agent](../../img/k8s/mini-diagrams/k8s-to-teleport-mono.svg)
+    Connect a Kubernetes cluster to an existing Teleport cluster.
   </Tile>
 </TileSet>
