fix some reports and links

--- a/docs/pages/cloud/faq.mdx
+++ b/docs/pages/cloud/faq.mdx
@@ -9,7 +9,8 @@ Yes.
 
 ## What is the cloud SLA
 
-Our current SLA is 99.5.
+Teleport Cloud commits to SLA of (=cloud.sla.monthly_percentage=)% of monthly uptime percentage,
+a maximum of (=cloud.sla.monthly_downtime=) of downtime per month.
 
 ### How does Cloud Billing work?
 
@@ -75,7 +76,7 @@ We will be upgrading the preview version of Teleport Cloud automatically.
 
 ### Does your SOCII report include Teleport Cloud?
 
-Yes.
+(!docs/pages/includes/soc2.mdx!)
 
 ### Can a customer deploy multiple clusters in Teleport Cloud?
 
