--- a/docs/pages/database-access/reference/cli.mdx
+++ b/docs/pages/database-access/reference/cli.mdx
@@ -88,7 +88,7 @@ Prints details about `database-resource-name` database resource.
 
 ## tctl rm db/database-resource-name
 
-Removes database resource called `database-resource-name`
+Removes database resource called `database-resource-name`.
 
 ## tsh db ls
 
