Try mini-diagrams and update launchpad titles (#7684)
* Try mini-diagrams and update launchpad titles

* fix some reports and links

--- a/docs/pages/cloud/faq.mdx
+++ b/docs/pages/cloud/faq.mdx
@@ -7,6 +7,11 @@ description: Teleport cloud frequently asked questions.
 
 Yes.
 
+## What is the cloud SLA
+
+Teleport Cloud commits to SLA of (=cloud.sla.monthly_percentage=)% of monthly uptime percentage,
+a maximum of (=cloud.sla.monthly_downtime=) of downtime per month.
+
 ### How does Cloud Billing work?
 
 [Reach out to sales](https://goteleport.com/signup/enterprise) to discuss pricing.
@@ -73,7 +78,7 @@ within a configurable maintenance window.
 
 ### Does your SOCII report include Teleport Cloud?
 
-Yes.
+(!docs/pages/includes/soc2.mdx!)
 
 ### Can a customer deploy multiple clusters in Teleport Cloud?
 
