--- a/docs/pages/includes/permission-warning.mdx
+++ b/docs/pages/includes/permission-warning.mdx
@@ -3,10 +3,11 @@
   
   Generally:
 
-  1. We discourage using `sudo` in production environments unless it's needed. You can run the auth, proxy, application access, kubernetes access, and database access teleport components as a non-root user. Only the teleport ssh service requires root access.
-  2. We encourage creating new, non-root, users or new test instances for experimenting with Teleport.
-  3. We encourage adherence to the *Principle of Least Privilege* (PoLP) and *Zero Admin* best practices. Don't give users the `admin` role when giving them the more restrictive `access,editor` roles will do instead.
-  4. Saving tokens into a file rather than sharing tokens directly *as strings*.
+  1. We discourage using `sudo` in production environments unless it's needed.
+  2. You can run Teleport's auth, proxy, application access, Kubernetes access, and database access services as a non-root user - only the SSH/node service requires root access. You will, however, also need root permissions (or the `CAP_NET_BIND_SERVICE` capability) to make Teleport listen on a port numbered < 1024 (e.g. 443)
+  3. We encourage creating new, non-root, users or new test instances for experimenting with Teleport.
+  4. We encourage adherence to the *Principle of Least Privilege* (PoLP) and *Zero Admin* best practices. Don't give users the `admin` role when giving them the more restrictive `access,editor` roles will do instead.
+  5. Saving tokens into a file rather than sharing tokens directly *as strings*.
 
   Learn more about [Teleport Role-Based Access Control](https://goteleport.com/docs/access-controls/introduction/) best practices.
 </Admonition>
