--- a/docs/pages/admin-guide.mdx
+++ b/docs/pages/admin-guide.mdx
@@ -1178,9 +1178,10 @@ Teleport without any extra work, except configuring OpenSSH client to work with
 Teleport Proxy:
 
 - configure your OpenSSH to connect to Teleport proxy and use `ssh-agent` socket
-- enable scp mode in the Ansible config file (default is `/etc/ansible/ansible.cfg` ):
+- enable scp mode in the Ansible config file (ansible searches in `$ANSIBLE_CONFIG`, `./ansible.cfg`, `~/.ansible.cfg`, and finally `/etc/ansible/ansible.cfg`  in that order):
 
 ```bash
+[ssh_connection]
 scp_if_ssh = True
 ```
 
