Added 07/30 release update.

--- a/docs/pages/preview/upcoming-releases.mdx
+++ b/docs/pages/preview/upcoming-releases.mdx
@@ -14,11 +14,11 @@ Teleport 7.0 will focus on adding support for the MongoDB protocol, BPF based re
 
 You can find the full list of fixes and features in the [Github milestone](https://github.com/gravitational/teleport/milestone/54).
 
-| Version     | Date            | Description                      |
-| ----------- | --------------- | -------------------------------- |
-| First alpha | June 1st, 2021  | Good for some testing and demos. |
-| First beta  | June 15th, 2021 | Deploy on staging.               |
-| Release     | July 30th, 2021 | Good to go for production.       |
+| Version     | Date             | Description                                                                                                           |
+| ----------- | ---------------- | --------------------------------------------------------------------------------------------------------------------- |
+| First alpha | June 1st, 2021   | Good for some testing and demos.                                                                                      |
+| First beta  | June 15th, 2021  | Deploy on staging, current beta: [7.0.0-beta.5](https://github.com/gravitational/teleport/releases/tag/v7.0.0-beta.5) |
+| Release     | August 6th, 2021 | Good to go for production.                                                                                            |
 
 ### Teleport 7.1
 
