--- a/docs/pages/server-access/guides/restricted-session.mdx
+++ b/docs/pages/server-access/guides/restricted-session.mdx
@@ -81,7 +81,7 @@ ssh_service:
     enabled: true
 ```
 
-## Step 2/4. Define a network restrictions policy by using `tctl`:
+## Step 2/4. Define a network restrictions policy
 
 Create a file `netpolicy.yaml`:
 
