Reference docs for AuthPreference (#7503)
* Reference docs for AuthPreference

Co-authored-by: Alexander Klizhentas <klizhentas@gmail.com>

--- a/docs/pages/setup/reference/terraform-provider.mdx
+++ b/docs/pages/setup/reference/terraform-provider.mdx
@@ -12,6 +12,7 @@ Supported resources:
 - [teleport_oidc_connector](#teleport_oidc_connector)
 - [teleport_saml_connector](#teleport_saml_connector)
 - [teleport_trusted_cluster](#teleport_trusted_cluster)
+- [teleport_auth_preference](#teleport_auth_preference)
 
 ## Provider configuration
 
@@ -422,3 +423,35 @@ Spec contains parameters of a resource.
 | `role_map`                   | set         | Role mappings to remote roles |
 | `role_map.local`             | string list | Local roles to map to |
 | `role_map.remote`            | string      | Remote role name to map from |
+
+## teleport_auth_preference
+
+The auth preferenfce resource defines cluster auth preference for the Teleport cluster. This resource is a singleton. It gots reset on deletion.
+
+**metadata**
+
+Metadata specifies a resource description, labels and optional expiry date and time.
+
+| Name                    | Type       | Required | Description                               |
+|-------------------------|------------|----------|-------------------------------------------|
+|            `description`|     string |          | Connector description                     |
+|                 `labels`| string map |          | Resource labels                           |
+|              `namespace`|     string |          | Resource namespace ("default" by default) |
+|                `expires`|     string |          | Expiry time in RFC8829 format             |
+
+**spec**
+
+Spec contains parameters of a resource.
+
+| Name                         | Type        | Description                                                                   |
+|------------------------------|-------------|-------------------------------------------------------------------------------|
+| `type`                       | string      | Type is the type of authentication                                            |
+| `second_factor`              | string      | SecondFactor is the type of second factor                                     |
+| `connector_name`             | string      | ConnectorName is the name of the OIDC or SAML connector. If this value is not set the first connector in the backend will be used |
+| `u2f`                        | set         | U2F defines settings for U2F device                                           |
+| `u2f.app_id`                 | string      | The application ID for universal second factor                                |
+| `u2f.facets`                 | string list | The facets for universal second factor                                        |
+| `u2f.device_attestation_c_as | string list | Trusted attestation CAs for U2F  devices                                      |
+| `require_session_mfa`        | bool        | Causes all sessions in this cluster to require MFA  checks                    |
+| `disconnect_expired_cert`    | bool        | If true, connections with expired client certificates will get disconnected   |
+| `allow_local_auth`           | bool        | If true, local authentication is enabled                                      |
