Update download query param filter for mac
This was changed from `macos` to `mac` at some point.

--- a/docs/pages/installation.mdx
+++ b/docs/pages/installation.mdx
@@ -97,7 +97,7 @@ helm install teleport teleport/teleport
 
 <Tabs>
   <TabItem label="Download">
-    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=macos) (tsh client only, signed) file, double-click to run the Installer.
+    [Download MacOS .pkg installer](https://goteleport.com/teleport/download?os=mac) (tsh client only, signed) file, double-click to run the Installer.
 
     <Admonition type="note">
       This method only installs the `tsh` client for interacting with Teleport clusters.
@@ -113,7 +113,7 @@ helm install teleport teleport/teleport
     <Admonition type="note">
       The Teleport package in Homebrew is not maintained by Teleport and we can't
       guarantee its reliability or security. We recommend the use of our [own
-      Teleport packages](https://goteleport.com/teleport/download?os=macos).
+      Teleport packages](https://goteleport.com/teleport/download?os=mac).
     </Admonition>
 
     <Admonition type="note">
