--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -342,3 +342,46 @@ Function | Description
 --- | ---
 `email.local(variable)` | Extracts the local part of an email field, like `Alice <alice@example.com>` or `bob@example.com`.
 `regexp.replace(variable, expression, replacement)` | Finds all matches of `expression` and replaces them with `replacement`. This supports expansion, e.g. `regexp.replace(external.email, "^(.*)@example.com$", "$1")`. Values which do not match the expression will be filtered out.
+
+## Pattern matching in Access & Review Requests
+
+Access and Reviewer Request specifications do not use the same interpolation 
+system as logins, labels etc. Instead, you can use the `claims_to_roles` clause 
+in the `request` and `review` rules to specify one or more patterns to match. 
+
+For example, given the following rule template:
+
+```yaml
+kind: role
+version: v3
+metadata:
+  name: employee
+spec:
+  allow:
+    request:
+      # `roles` is a static list of roles a user with this role may request 
+      # temporary access to
+      roles: [access]  
+
+      claims_to_roles:
+        - claim: 'groups'         
+          value: '^product-(.*)$' # matches all group names with a leading 'product-'
+          roles: ['$1-admin']     # gerenerates a role name from the value capture
+```
+
+and a user
+
+```yaml
+kind: user
+version: v2
+metadata:
+  name: someone
+spec:
+  traits:
+    groups: ['employees', 'product-alpha', 'product-beta']
+```
+
+The user would be allowed to request access to the RBAC roles `access` (from the static 
+role list) and `alpha-admin` and `beta-admin` (from the `claims_to_roles` mapping).
+
+The same syntax applies for Review Requests.
