--- a/docs/pages/access-controls/guides/role-templates.mdx
+++ b/docs/pages/access-controls/guides/role-templates.mdx
@@ -369,19 +369,19 @@ spec:
           roles: ['$1-admin']     # gerenerates a role name from the value capture
 ```
 
-and a user
+and a user "Alice":
 
 ```yaml
 kind: user
 version: v2
 metadata:
-  name: someone
+  name: alice
 spec:
   traits:
     groups: ['employees', 'product-alpha', 'product-beta']
 ```
 
-The user would be allowed to request access to the RBAC roles `access` (from the static 
+then Alice would be allowed to request access to the RBAC roles `access` (from the static 
 role list) and `alpha-admin` and `beta-admin` (from the `claims_to_roles` mapping).
 
 The same syntax applies for Review Requests.
